--- a/index.html
+++ b/index.html
@@ -9,7 +9,40 @@
 </head>
 
 <body>
-    CONTENT
+    <header>
+        <img src="#" alt="Logo">
+        <nav>
+            <a href="#">About</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Job</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+
+    <main>
+        <div>
+            <h1>404</h1>
+            <h2>404 Lost in space</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga cupiditate a alias omnis pariatur tempore necessitatibus suscipit voluptatem modi! Ipsam.</p>
+            <div>
+                <a href="#">Go home</a>
+                <a href="#">Back</a>
+            </div>
+        </div>
+        <div>
+            <img src="#" alt="Astronautas raso zinute namo, nes isskrydo i kosmosa">
+        </div>
+    </main>
+
+    <footer>
+        <div>
+            <a href="#">FB</a>
+            <a href="#">TW</a>
+            <a href="#">IG</a>
+            <a href="#">LN</a>
+        </div>
+        <p>&copy; 2024 - All rights reserved</p>
+    </footer>
 </body>
 
 </html>
