--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="container">
         <img class="logo" src="./img/logo.webp" alt="Logo">
         <nav class="main-nav">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link active" href="#">About</a>
             <a class="nav-link" href="#">Portfolio</a>
             <a class="nav-link" href="#">Job</a>
             <a class="nav-link" href="#">Contact</a>
