--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
     <main class="container">
         <div class="column-left">
-            <h1 class="main-title">404</h1>
-            <h2 class="subtitle">404 Lost in space</h2>
+            <h1 class="main-title"><span>404</span>Lost in space</h1>
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga cupiditate a alias omnis pariatur tempore necessitatibus suscipit voluptatem modi! Ipsam.</p>
             <div class="btn-list">
                 <a class="btn" href="#">Go home</a>
@@ -30,7 +29,7 @@
             </div>
         </div>
         <div class="column-right">
-            <img class="main-img" src="#" alt="Astronautas raso zinute namo, nes isskrydo i kosmosa">
+            <img class="main-img" src="./img/astronautas.png" alt="Astronautas raso zinute namo, nes isskrydo i kosmosa">
         </div>
     </main>
 
