--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga cupiditate a alias omnis pariatur tempore necessitatibus suscipit voluptatem modi! Ipsam.</p>
             <div class="btn-list">
                 <a class="btn" href="#">Go home</a>
-                <a class="btn" href="#">Back</a>
+                <a class="btn btn-white" href="#">Back</a>
             </div>
         </div>
         <div class="column-right">
