--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astronautas</title>
+    <!-- base -->
+    <!-- 3rd-party -->
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <!-- components -->
+    <!-- custom -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -35,10 +40,24 @@
 
     <footer class="container">
         <div class="socials">
-            <a class="social-link" href="#">FB</a>
-            <a class="social-link" href="#">TW</a>
-            <a class="social-link" href="#">IG</a>
-            <a class="social-link" href="#">LN</a>
+            <a class="social-link" href="#">
+                <i class="fa fa-facebook-square" aria-hidden="true"></i>
+            </a>
+            <a class="social-link" href="#">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a class="social-link" href="#">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+            <a class="social-link" href="#">
+                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            </a>
+        </div>
+        <div class="socials">
+            <a class="social-link fa fa-facebook-square" href="#"></a>
+            <a class="social-link fa fa-twitter" href="#"></a>
+            <a class="social-link fa fa-instagram" href="#"></a>
+            <a class="social-link fa fa-linkedin-square" href="#"></a>
         </div>
         <p class="copyright-text">&copy; 2024 - All rights reserved</p>
     </footer>
